// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticlePreview component > should render correctly 1`] = `
<div>
  <article
    class="pb-3"
  >
    <header>
      <h2
        class="h3"
      >
        <a
          href="/test-post"
        >
          Test Title
        </a>
      </h2>
      <div
        class="flex justify-center items-center gap-5"
      >
        <img
          alt="Adoptium PMC"
          image="[object Object]"
          stlye="[object Object]"
          style="margin-left: 0.5rem; margin-bottom: 0px; min-width: 30px; border-radius: 100%;"
        />
        <span
          class="text-[16px] font-bold leading-[150%] text-white"
        >
          <a
            href="/news/author/pmc"
          >
            <span
              class="text-primary pr-2"
            >
              Adoptium PMC
              ,
            </span>
             
            2021-01-01
          </a>
        </span>
      </div>
    </header>
    <section>
      <p>
        Test Description
         
        <a
          href="/test-post"
        >
          Read more
        </a>
      </p>
    </section>
  </article>
</div>
`;

exports[`ArticlePreview component > should render correctly no match 1`] = `
<div>
  <article
    class="pb-3"
  >
    <header>
      <h2
        class="h3"
      >
        <a
          href="/test-post"
        >
          Test Title
        </a>
      </h2>
      <div
        class="flex justify-center items-center gap-5"
      >
        <span
          class="text-[16px] font-bold leading-[150%] text-white"
        >
          <a
            href="/news/author/foo"
          >
            <span
              class="text-primary pr-2"
            >
              Test Author
              ,
            </span>
             
            2021-01-01
          </a>
        </span>
      </div>
    </header>
    <section>
      <p>
        Test Excerpt
         
        <a
          href="/test-post"
        >
          Read more
        </a>
      </p>
    </section>
  </article>
</div>
`;
